new comment added in the index file

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -114,7 +114,7 @@
             </div>
         </section>
 
-        <!-- jh -->
+        <!-- available for freelancing -->
         <section class="ftco-section ftco-hireme img">
             <div class="col-md-7 ftco-animate text-center fadeInUp       ftco-animated">
                 <h2>I'm <span>Available</span> for freelancing</h2>
