new comment added

--- a/To Do List App/TO DO LIST APP.html
+++ b/To Do List App/TO DO LIST APP.html
@@ -17,7 +17,6 @@
         </div>
       <div>
         <h1>To Do list App</h1>
-        <!-- <h2></h2> -->
       <div id="toDoList">
         <input type="text" id="inputField" />
         <button id="todobutton">add items</button>
@@ -27,6 +26,7 @@
           <h2>to do items</h2>
 
           <button id="showHide">show/hide</button>
+          <!-- for counting the items i added this -->
           <span id="sup">0</span>
           <ul id="todoItems">
             <!-- items will automatically added here -->
