search element added

--- a/To Do List App/TO DO LIST APP.html
+++ b/To Do List App/TO DO LIST APP.html
@@ -21,6 +21,9 @@
         <input type="text" id="inputField" />
         <button id="todobutton">add items</button>
         <button id="clearAll">clear All</button>
+        <br>
+        <br>
+        <input type="search" id="search">
 
         <div id="todoItemContainer">
           <h2>to do items</h2>
