new lines added in css and html file

--- a/note taker app/index.html
+++ b/note taker app/index.html
@@ -18,6 +18,8 @@
         <button id="noteButton">Add Note</button>
         <button class="clear_all">Clear All</button>
         <span class="totalNotes">Total 0 notes are available</span>
+        <input type="text" id="filter_input" placeholder="search your note">
+        <button id="filter_search">search</button>
         <div id="noteList">
             <!-- notes will be updated here automatically. -->
         </div>
