code updated in 3 main files

--- a/tic tac toe app/index.html
+++ b/tic tac toe app/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="gameContainer">
       <div class="box_container">
+        <div class="line"></div>
         <div class="box"><span class="boxText"></span></div>
         <div class="box"><span class="boxText"></span></div>
         <div class="box"><span class="boxText"></span></div>
@@ -24,6 +25,12 @@
        <div class="inside_info">
         <h1>welcome to my tic tac toe game</h1>
         <p class="turn_text">Turn for : x</p>
+
+        <label for="">score of X :</label>
+        <span id="winForX"></span> 
+        <label for="">score of 0 :</label> 
+        <span id="winFor0"></span>
+       
         <button class="resetButton">Reset</button>
        </div>
        
